syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package average;

// The average service definition
service AverageCalculator{
	rpc CalculateAverage (stream AverageRequest) returns (AverageResponse);
}

// The request message
message AverageRequest{
	int32 inputNumber = 1;
}

message AverageResponse{
	double average = 1;
}
